# flashlight

./: CMakeLists.txt  README.md  batch_submit.sh  batch_submit_detr.sh  submit_sha.sh  wrapper.sh  wrapper_detr.sh  wrapper_detr_continue.sh
.circleci/: config.yml
app/image_classification/: CMakeLists.txt
app/image_classification/dataset/: Imagenet.h
app/image_classification/examples/: Resnet34.cpp
app/object_detection/: CMakeLists.txt
app/object_detection/dataset/: Coco.cpp  Coco.h
app/object_detection/examples/: Detr.cpp
app/object_detection/nn/: Transformer.h
bindings/python/: setup.py
examples/: Resnet34.cpp
ext/image/fl/dataset/: CMakeLists.txt
ext/image/fl/models/: Resnet.cpp  Resnet34Backbone.h
flashlight/app/: CMakeLists.txt
flashlight/app/asr/: Decode.cpp  Test.cpp  Train.cpp
flashlight/app/asr/tools/: VoiceActivityDetection-CTC.cpp
flashlight/app/asr/tutorial/: FinetuneCTC.cpp  InferenceCTC.cpp
flashlight/app/benchmark/: CMakeLists.txt  ModelBenchmarker.cpp  Run.cpp
flashlight/app/imclass/: CMakeLists.txt
flashlight/app/imgclass/examples/: ImageNetEval.cpp  ImageNetResnet34.cpp  ImageNetResnet34Backbone.cpp  ImageNetTransformer.cpp
flashlight/app/lm/: Test.cpp  Train.cpp  Trainer.cpp  Trainer.h
flashlight/app/objdet/: CMakeLists.txt
flashlight/app/objdet/common/: Defines.h  Helper.h
flashlight/app/objdet/criterion/: Hungarian.cpp  Hungarian.h  HungarianLib.cpp  HungarianLib.h  SetCriterion.cpp  SetCriterion.h
flashlight/app/objdet/dataset/: BatchTransformDataset.h  BoxUtils.cpp  BoxUtils.h  CMakeLists.txt  Coco.cpp  Coco.h  TransformAllDataset.h  Transforms.cpp  Transforms.h
flashlight/app/objdet/examples/: CocoDetr.cpp  Detr.cpp  ImageNetResnet50Backbone.cpp
flashlight/app/objdet/models/: Resnet50Backbone.h
flashlight/app/objdet/nn/: CMakeLists.txt  Detr.cpp  Detr.h  PositionalEmbeddingSine.cpp  (+3 more)
flashlight/app/vision/: CMakeLists.txt  DartConfiguration.tcl  Resnet34.cpp
flashlight/app/vision/dataset/: CMakeLists.txt  ImageDataset.cpp  ImageDataset.h  ImagenetUtils.cpp  ImagenetUtils.h
flashlight/app/vision/models/: CMakeLists.txt  Resnet.cpp  Resnet.h
flashlight/app/vision/scripts/: train.lst
flashlight/contrib/modules/: Resnet.cpp
flashlight/dataset/: ImageDataset.cpp  ImageDataset.h  PrefetchDataset.cpp
flashlight/ext/common/: Runtime.cpp  Runtime.h
flashlight/fl/dataset/: Utils.h
flashlight/fl/optim/: AdamOptimizer.cpp
flashlight/fl/test/: CMakeLists.txt
flashlight/pkg/: CMakeLists.txt
flashlight/pkg/halide/: HalideInterface.cpp  HalideInterface.h
flashlight/pkg/runtime/: Runtime.h
flashlight/pkg/speech/: CMakeLists.txt
tests/: CMakeLists.txt
vision/: Detr.cpp  Resnet34.cpp  Resnet34Backbone.h
vision/dataset/: BoxUtils.cpp  Coco.cpp
vision/models/: Resnet.cpp
vision/nn/: Transformer.h
vision/scripts/: convert_to_tensorboard.py  prepare_coco_old.py
(+82 files in other folders)
